improving user experience

--- a/config/locales/en.activerecord.yml
+++ b/config/locales/en.activerecord.yml
@@ -10,7 +10,7 @@ en:
         remember_me: Remember me
         role_list:
           admin: Admin
-          user: User
+          client: Client
     models:
       user:
         one: User
